--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 </head>
 
 <body>
-<<<<<<< HEAD
 
     <header class="header container">
         <div class="header__logo">
@@ -26,10 +25,6 @@
             <a href="#" class="nav__link nav__link--register">Registrar restaurante</a>
         </nav>
     </header>
-=======
-    
-    
->>>>>>> a1468fff7f9b95bedd9b9e119f0fc84a1bf2c212
 
     <!-- Seccion del formulario -->
 
@@ -202,7 +197,7 @@
     <!-- Seccion de favoritos -->
 
     <main class="favorites">
-        <h2 class="favorites__title">Resraurantes favoritos</h2>
+        <h2 class="favorites__title">Restaurantes favoritos</h2>
 
         <div class="favorites__grid container">
             <div class="favorite">
